--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "## About:",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon backend/server.js"
+    "client": "npm start --prefix frontend",
+    "server": "nodemon backend/server.js",
+    "dev": "concurrently \"npm run client\" \"npm run server\""
   },
   "keywords": [],
   "author": "",
